<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/driver"
        android:layout_width="74dp"
        android:layout_height="34dp"
        android:layout_marginStart="268dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/select_r"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/Titlepage"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/room_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/builder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="362dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="11dp"
        android:background="@drawable/spinner"
        android:max="9"
        app:layout_constraintBottom_toTopOf="@+id/explore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/skill"
        android:layout_width="242dp"
        android:layout_height="30dp"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/skill"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"


        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/builder_spinner"
        android:layout_width="277dp"
        android:layout_height="61dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/spinner"
        android:popupBackground="@drawable/spinner"

        app:layout_constraintBottom_toTopOf="@+id/driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="277dp"
        android:layout_height="61dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/spinner"
        android:popupBackground="@drawable/spinner"
        app:layout_constraintBottom_toTopOf="@+id/skill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/explore"
        android:layout_width="125dp"
        android:layout_height="77dp"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="44dp"
        android:onClick="exploreMode"
        android:text="@string/explore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/revisit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/revisit"
        android:layout_width="125dp"
        android:layout_height="77dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="44dp"
        android:onClick="revisitMode"
        android:text="@string/revisit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/builder"
        android:layout_width="177dp"
        android:layout_height="31dp"
        android:layout_marginStart="168dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/select_b"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/builder_spinner"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton5"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:checked="false"
        android:text="ToggleButton"
        android:textOff="@string/Music"
        android:textOn="@string/Off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>