<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lose">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginStart="70dp"
        android:text="@string/energy"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/energy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="151dp"
        android:layout_height="39dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="34dp"
        android:text="@string/path"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pathused"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="118dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="420dp"
        android:text="@string/lose"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="71dp"
        android:text="@string/tryagain"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="151dp"
        android:layout_height="39sp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="34dp"
        android:text="@string/shortest"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/shortest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pathused"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="17dp"
        android:text="@string/temp"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toTopOf="@+id/shortest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/shortest"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginEnd="63dp"
        android:text="@string/temp"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/energy"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="223dp"
        android:text="@string/temp"
        android:textSize="20sp"
        android:textColor="@color/Titlepage"
        android:fontFamily="sans-serif-black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shortest" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="248dp"
        android:layout_height="95dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/again"
        android:onClick="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>