<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="72dp"
        android:layout_height="23dp"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="58dp"
        android:text="@string/manual"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="109dp"
        android:layout_height="27dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="54dp"
        android:text="@string/wall"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4" />

    <ImageButton
        android:id="@+id/wallfollower"
        android:layout_width="88dp"
        android:layout_height="87dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/wall"
        android:onClick="driver_wall"
        android:background="@drawable/harry"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/wizard"
        />

    <ImageButton
        android:id="@+id/wizard"
        android:layout_width="88dp"
        android:layout_height="87dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/wizard"
        android:background="@drawable/granger"
        android:onClick="driver_wizard"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/robot"
        android:layout_width="258dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="137dp"
        android:layout_marginBottom="21dp"
        android:text="@string/select_robot"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/spinner_robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"

        android:layout_width="360dp"
        android:layout_height="59dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="57dp"
        app:layout_constraintBottom_toTopOf="@+id/robot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="348dp"
        android:layout_height="34dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="67dp"
        android:text="@string/temp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_robot"
        android:layout_width="334dp"
        android:layout_height="61dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/spinner"
        app:layout_constraintBottom_toTopOf="@+id/driver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/driver"
        android:layout_width="260dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="135dp"
        android:layout_marginBottom="28dp"
        android:text="@string/select_driver"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/wallfollower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/manual"
        android:layout_width="88dp"
        android:layout_height="87dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/manual"
        android:background="@drawable/ron"
        android:onClick="manual"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/wallfollower"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="72dp"
        android:layout_height="23dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="58dp"
        android:text="@string/wizard"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>