<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/maze">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="29dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/showsolution"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="79dp"
        android:layout_height="26dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/showwall"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton3" />

    <ToggleButton
        android:id="@+id/toggleButton4"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton2"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toStartOf="@+id/toggleButton3"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggleButton3"
        android:layout_width="72dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="38dp"
        android:text="ToggleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="47dp"
        android:layout_height="30dp"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/showmap"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton4" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <edu.wm.cs.cs301.xianglupeng.gui.MazePanel
        android:id="@+id/mazePanel"
        android:layout_width="350dp"
        android:layout_height="351dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="39dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="64dp"
        android:text="@string/zoomin"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="39dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="64dp"
        android:text="@string/zoomout"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>